Sequencer crashes when changing the value of multiple strips #77148

Closed
opened 2020-05-28 23:40:43 +02:00 by Tal Hershkovich · 11 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 398.36

Blender Version
Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-03-12 05:06, hash: 375c7dc4ca

Short description of error
Blender is crashing when moving multiple texts and colors using alt key

Exact steps for others to reproduce the error
sequencer_crash.blend

  • Select all the text and color strips in the sequencer
  • Inside the effect strip in the layout panel press on the Y channel's arrows together with alt key, in order to change the value for all the selected strips
  • Blender is crashing for me at this point. I get the following error:
    Error : EXCEPTION_ACCESS_VIOLATION
    Address : 0x00007FF6707A281B
**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 398.36 **Blender Version** Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-03-12 05:06, hash: `375c7dc4ca` **Short description of error** Blender is crashing when moving multiple texts and colors using alt key **Exact steps for others to reproduce the error** [sequencer_crash.blend](https://archive.blender.org/developer/F8561359/sequencer_crash.blend) - Select all the text and color strips in the sequencer - Inside the effect strip in the layout panel press on the Y channel's arrows together with alt key, in order to change the value for all the selected strips - Blender is crashing for me at this point. I get the following error: Error : EXCEPTION_ACCESS_VIOLATION Address : 0x00007FF6707A281B

Added subscriber: @TalHershkovich

Added subscriber: @TalHershkovich
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm.
Might take a bit of trying to get it to crash (at least on my side), but eventually I got it to crash
It is actually crashing in UI drawing code:

1  ??                                                      0x7fffc886f501 
2  ??                                                      0x7fffc892b331 
3  ??                                                      0x7fffc8933593 
4  immDrawSetup                  gpu_immediate.c      373  0x9ba34ab      
5  immEnd                        gpu_immediate.c      435  0x9ba375b      
6  immRecti                      gpu_immediate_util.c 84   0x9ba58b8      
7  UI_panel_category_draw_all    interface_panel.c    2464 0x3a585a8      
8  ED_region_panels_draw         area.c               2779 0x35992e2      
9  ED_region_panels              area.c               2809 0x3599434      
10 sequencer_buttons_region_draw space_sequencer.c    786  0x3ac4abf      
11 ED_region_do_draw             area.c               538  0x35927ea      
12 wm_draw_window_offscreen      wm_draw.c            688  0x2ed1f95      
13 wm_draw_window                wm_draw.c            809  0x2ed2495      
14 wm_draw_update                wm_draw.c            1012 0x2ed2ae5      
15 WM_main                       wm.c                 481  0x2ecf639      
16 main                          creator.c            528  0x2a99145  
Can confirm. Might take a bit of trying to get it to crash (at least on my side), but eventually I got it to crash It is actually crashing in UI drawing code: ``` 1 ?? 0x7fffc886f501 2 ?? 0x7fffc892b331 3 ?? 0x7fffc8933593 4 immDrawSetup gpu_immediate.c 373 0x9ba34ab 5 immEnd gpu_immediate.c 435 0x9ba375b 6 immRecti gpu_immediate_util.c 84 0x9ba58b8 7 UI_panel_category_draw_all interface_panel.c 2464 0x3a585a8 8 ED_region_panels_draw area.c 2779 0x35992e2 9 ED_region_panels area.c 2809 0x3599434 10 sequencer_buttons_region_draw space_sequencer.c 786 0x3ac4abf 11 ED_region_do_draw area.c 538 0x35927ea 12 wm_draw_window_offscreen wm_draw.c 688 0x2ed1f95 13 wm_draw_window wm_draw.c 809 0x2ed2495 14 wm_draw_update wm_draw.c 1012 0x2ed2ae5 15 WM_main wm.c 481 0x2ecf639 16 main creator.c 528 0x2a99145 ```

Added subscriber: @iss

Added subscriber: @iss

I can not reproduce with clicking on arrow with alt key, but if I alt+click on location Y and click away I get following stack trace:

 	ucrtbased.dll!00007ffb13c31d44()	Unknown
 	ucrtbased.dll!00007ffb13c351c5()	Unknown
 	ucrtbased.dll!00007ffb13c358c8()	Unknown
 	blender.exe!MEM_lockfree_freeN(void * vmemh) Line 128	C
 	blender.exe!seq_free_strip(Strip * strip) Line 231	C
>	blender.exe!BKE_sequence_free_ex(Scene * scene, Sequence * seq, const bool do_cache, const bool do_id_user, const bool do_clean_animdata) Line 249	C

 	blender.exe!BKE_sequencer_editing_free(Scene * scene, const bool do_id_user) Line 511	C
 	blender.exe!scene_free_data(ID * id) Line 345	C
 	blender.exe!BKE_libblock_free_datablock(ID * id, const int UNUSED_flag) Line 74	C
 	blender.exe!DEG::deg_free_copy_on_write_datablock(ID * id_cow) Line 1071	C++
 	blender.exe!DEG::deg_update_copy_on_write_datablock(const DEG::Depsgraph * depsgraph, const DEG::IDNode * id_node) Line 950	C++
 	blender.exe!DEG::`anonymous namespace'::depsgraph_ensure_view_layer(DEG::Depsgraph * graph) Line 346	C++
 	blender.exe!DEG::deg_evaluate_on_refresh(DEG::Depsgraph * graph) Line 380	C++
 	blender.exe!DEG_evaluate_on_refresh(Main * bmain, Depsgraph * graph) Line 62	C++
 	blender.exe!scene_graph_update_tagged(Depsgraph * depsgraph, Main * bmain, bool only_if_tagged) Line 1452	C
 	blender.exe!BKE_scene_graph_update_tagged(Depsgraph * depsgraph, Main * bmain) Line 1490	C
 	blender.exe!wm_event_do_depsgraph(bContext * C, bool is_after_open_file) Line 360	C
 	blender.exe!wm_event_do_refresh_wm_and_depsgraph(bContext * C) Line 387	C
 	blender.exe!wm_event_do_notifiers(bContext * C) Line 552	C
 	blender.exe!WM_main(bContext * C) Line 481	C
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 530	C
 	[External Code]	

Will investigate

I can not reproduce with clicking on arrow with alt key, but if I alt+click on location Y and click away I get following stack trace: ``` ucrtbased.dll!00007ffb13c31d44() Unknown ucrtbased.dll!00007ffb13c351c5() Unknown ucrtbased.dll!00007ffb13c358c8() Unknown blender.exe!MEM_lockfree_freeN(void * vmemh) Line 128 C blender.exe!seq_free_strip(Strip * strip) Line 231 C > blender.exe!BKE_sequence_free_ex(Scene * scene, Sequence * seq, const bool do_cache, const bool do_id_user, const bool do_clean_animdata) Line 249 C blender.exe!BKE_sequencer_editing_free(Scene * scene, const bool do_id_user) Line 511 C blender.exe!scene_free_data(ID * id) Line 345 C blender.exe!BKE_libblock_free_datablock(ID * id, const int UNUSED_flag) Line 74 C blender.exe!DEG::deg_free_copy_on_write_datablock(ID * id_cow) Line 1071 C++ blender.exe!DEG::deg_update_copy_on_write_datablock(const DEG::Depsgraph * depsgraph, const DEG::IDNode * id_node) Line 950 C++ blender.exe!DEG::`anonymous namespace'::depsgraph_ensure_view_layer(DEG::Depsgraph * graph) Line 346 C++ blender.exe!DEG::deg_evaluate_on_refresh(DEG::Depsgraph * graph) Line 380 C++ blender.exe!DEG_evaluate_on_refresh(Main * bmain, Depsgraph * graph) Line 62 C++ blender.exe!scene_graph_update_tagged(Depsgraph * depsgraph, Main * bmain, bool only_if_tagged) Line 1452 C blender.exe!BKE_scene_graph_update_tagged(Depsgraph * depsgraph, Main * bmain) Line 1490 C blender.exe!wm_event_do_depsgraph(bContext * C, bool is_after_open_file) Line 360 C blender.exe!wm_event_do_refresh_wm_and_depsgraph(bContext * C) Line 387 C blender.exe!wm_event_do_notifiers(bContext * C) Line 552 C blender.exe!WM_main(bContext * C) Line 481 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 530 C [External Code] ``` Will investigate

Changed status from 'Confirmed' to: 'Needs User Info'

Changed status from 'Confirmed' to: 'Needs User Info'

When I open this file I see error Error, region type 5 missing in - name:"Action", id:12
I get crashes when clicking around in the file or even when doing nothing. Stack trace is mostly random.

I will need more information on hw this file was created (any addons) and steps to reproduce from scratch.

When I open this file I see error `Error, region type 5 missing in - name:"Action", id:12` I get crashes when clicking around in the file or even when doing nothing. Stack trace is mostly random. I will need more information on hw this file was created (any addons) and steps to reproduce from scratch.

This issue was referenced by 0178e7b393

This issue was referenced by 0178e7b3939879323fefba798b7aff8ef1ea1cca

This issue was referenced by f88d59ecf8

This issue was referenced by f88d59ecf8e59aa8f5f4b0449a04122ea0c8acd0

Changed status from 'Needs User Info' to: 'Resolved'

Changed status from 'Needs User Info' to: 'Resolved'
Campbell Barton self-assigned this 2020-06-09 08:48:31 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77148
No description provided.