Fix T77148: Crash changing multiple values for sequencer strips

This was caused by assuming all strips were the same type.